// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/GeneralProduct/List/lib/RejectForm/index render 1`] = `
<form>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
    style={
      Object {
        "padding": "24px 24px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      align="center"
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Please give the reason of reject
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="grey-main"
        inline={false}
        variant="subtitle2"
        weight="normal"
      >
        Once you give the reason, it will be read by customer
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(Component)
        accept={
          Array [
            ".pdf",
          ]
        }
        fileName=""
        id="uploadfile"
        label="evidence"
        maxSize={1050000}
        onChange={[MockFunction]}
        withDelete={true}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <TextField
        control={Object {}}
        disabled={false}
        error={false}
        helperText=""
        label="Reason"
        maxLength={160}
        minRows={4}
        multiline={true}
        name="reason"
        required={true}
        shouldUnregister={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      className="makeStyles-boxButton-1"
    >
      <Button
        disabled={false}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        variant="ghost"
      >
        CANCEL
      </Button>
        
      <Button
        disabled={true}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        type="submit"
        variant="filled"
      >
        SUBMIT
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`src/containers/ServiceAssurance/GeneralProduct/List/lib/RejectForm/index render with no file 1`] = `
<form>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
    style={
      Object {
        "padding": "24px 24px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      align="center"
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Please give the reason of reject
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="grey-main"
        inline={false}
        variant="subtitle2"
        weight="normal"
      >
        Once you give the reason, it will be read by customer
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(Component)
        accept={
          Array [
            ".pdf",
          ]
        }
        fileName=""
        id="uploadfile"
        label="evidence"
        maxSize={1050000}
        onChange={[MockFunction]}
        withDelete={true}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <TextField
        control={Object {}}
        disabled={false}
        error={false}
        helperText=""
        label="Reason"
        maxLength={160}
        minRows={4}
        multiline={true}
        name="reason"
        required={true}
        shouldUnregister={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      className="makeStyles-boxButton-2"
    >
      <Button
        disabled={false}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        variant="ghost"
      >
        CANCEL
      </Button>
        
      <Button
        disabled={true}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        type="submit"
        variant="filled"
      >
        SUBMIT
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;
